add keybindings and update settings

--- a/code-server/User/settings.json
+++ b/code-server/User/settings.json
@@ -1,10 +1,8 @@
 {
   "security.workspace.trust.untrustedFiles": "open",
   "explorer.openEditors.visible": 1,
-  // Workbench
   "workbench.iconTheme": "material-icon-theme",
   "workbench.startupEditor": "newUntitledFile",
-  // Editor
   "editor.fontFamily": "JetBrains Mono",
   "editor.fontLigatures": true,
   "editor.cursorBlinking": "solid",
@@ -14,8 +12,42 @@
   "editor.wordWrap": "off",
   "editor.lineNumbers": "relative",
   "editor.trimAutoWhitespace": false,
-  "editor.renderWhitespace": "all",
-  // VSCodeVim
+  "git.autofetch": true,
+  "workbench.activityBar.location": "hidden",
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "diffEditor.ignoreTrimWhitespace": false,
+  "editor.fontSize": 14,
+  "terminal.integrated.fontSize": 14,
+  "debug.console.fontSize": 14,
+  "security.promptForRemoteFileProtocolHandling": false,
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "git.confirmSync": false,
+  "editor.lineHeight": 1.5,
+  "workbench.colorTheme": "One Dark Pro",
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "remote.SSH.connectTimeout": 1800,
+  "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font Mono",
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "window.menuBarVisibility": "toggle",
+  "window.customTitleBarVisibility": "auto",
+  "window.titleBarStyle": "custom",
+  "php.inlayHints.parameters.byReference": true,
+  "intelliphp.inlineSuggestionsEnabled": false,
+  "php.completion.showParameters": true,
+  "phpTools.suppressPremiumFeatures": true,
+  "php.codeLens.enabled": false,
+
   "vim.easymotion": true,
   "vim.useSystemClipboard": true,
   "vim.useCtrlKeys": true,
@@ -24,6 +56,7 @@
   "vim.handleKeys": {
     "<C-a>": false,
     "<C-f>": false,
+    "<C-k>": false,
     "<C-w>": false,
     "<C-b>": false,
     "<C-j>": false,
@@ -228,34 +261,4 @@
       ]
     }
   ],
-  "git.autofetch": true,
-  "workbench.activityBar.location": "hidden",
-  "[javascript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-  },
-  "diffEditor.ignoreTrimWhitespace": false,
-  "editor.fontSize": 14,
-  "terminal.integrated.fontSize": 14,
-  "debug.console.fontSize": 14,
-  "security.promptForRemoteFileProtocolHandling": false,
-  "[jsonc]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
-  },
-  "git.confirmSync": false,
-  "editor.lineHeight": 1.5,
-  "workbench.colorTheme": "One Dark Pro",
-  "[javascriptreact]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-  },
-  "remote.SSH.connectTimeout": 1800,
-  "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font Mono",
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "window.menuBarVisibility": "toggle",
-  "window.customTitleBarVisibility": "auto",
-  "window.titleBarStyle": "custom",
 }
