--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -27,15 +27,22 @@
     description: Installing code-server DotENV extension
     stdin: true
     stdout: true
-  - command: code-server --install-extension DEVSENSE.phptools-vscode
-    description: Installing code-server PHP extension
+  - command: code-server --install-extension bmewburn.vscode-intelephense-client
+    description: Installing code-server PHP Intelephense extension
     stdin: true
     stdout: true
+  - command: code-server --install-extension MehediDracula.php-namespace-resolver
+    description: Installing code-server PHP Namespace Resolver extension
+    stdin: true
+    stdout: true
+  - command: code-server --install-extension xdebug.php-debug
+    description: Installing code-server PHP Debug extension
+    stdin: true
+    stdout: true	
   - command: code-server --install-extension Vue.volar
     description: Installing code-server Vue extension
     stdin: true
     stdout: true
-
 
 - link:
     ~/.local/share/code-server/User:
